# SNL-Compiler

./: .gitignore
LLVM Example/: CMakeCache.txt  CMakeLists.txt  toy.cpp
LLVM Example/LLVM Example/: LLVM Example.cpp  LLVM Example.vcxproj  LLVM Example.vcxproj.filters
SNL Compiler/: SNL Compiler.sln
SNL Compiler/SNL Compiler/: LL1.cpp  LL1.h  Parser.cpp  Parser.h  SLR1.cpp  SLR1.h  SNL Compiler.cpp  SNL Compiler.vcxproj  SNL Compiler.vcxproj.filters  SNL_LL1.cpp  SNL_LL1.h  SNL_Lexer.cpp  SNL_Lexer.h  SNL_Parser.cpp  SNL_Parser.h  SNL_Production.cpp  SNL_Production.h  SNL_Tokens.h  TokenName.h  Utils.cpp  Utils.h  garbage.txt  qt_snl.pro  sample.snl  token.list
SNL Compiler/SNL Compiler/Production/: production.txt  productions_ppt.txt  productions_pptt.txt
SNL Compiler/SNL Compiler/SNL-Test/simple/: C2.TXT  C6.TXT  C8.TXT
SNL Compiler/SNL Compiler/old files/: Parser.cpp
SNL Compiler/SNL Compiler/produciton/: production.txt  production11.txt  productions_ppt - 副本.txt  productions_ppt.txt
SNL Compiler/SNL Compiler/source/: SNL_LL1.cpp  SNL_LL1.h  SNL_Lexer.cpp  SNL_Lexer.h  SNL_Production.cpp  SNL_Production.h  SNL_Tokens.cpp  SNL_Tokens.h  Utils.cpp  Utils.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  snl_compiler.cpp
SNL Compiler/SNL Compiler/test case/simple/: C1.TXT
